<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_rounded"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="10dp"
    android:paddingEnd="24dp"
    android:paddingBottom="22dp">

    <View
        android:layout_width="42dp"
        android:layout_height="5dp"
        android:background="@drawable/bg_drag_handle" />

    <TextView
        android:id="@+id/tvLogoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/profile_logout_dialog_title"
        android:textColor="@color/neutral_100"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvLogoutMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:text="@string/profile_logout_dialog_message"
        android:textColor="@color/neutral_100"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmLogout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/profile_logout_dialog_confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="#FF1E4D"
        app:cornerRadius="24dp"
        app:elevation="0dp"
        app:rippleColor="@android:color/transparent"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/tvCancelLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/lexend_semibold"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:text="@string/profile_logout_dialog_cancel"
        android:textColor="@color/neutral_100"
        android:textSize="14sp" />

</LinearLayout>
